2008-08-12  Jens-Michael Hoffmann  <jensmh@gmx.de>

    * src/lib/geodata/handlers/kml/KmlSchemaTagHandler.cpp:
    * src/lib/geodata/handlers/kml/KmlPairTagHandler.h:
    * src/lib/geodata/handlers/kml/KmlOpenTagHandler.cpp:
    * src/lib/geodata/handlers/kml/KmlSimpleFieldTagHandler.h:
    * src/lib/geodata/handlers/kml/KmlTessellateTagHandler.cpp:
    * src/lib/geodata/handlers/kml/KmlAreaTagHandler.h:
    * src/lib/geodata/handlers/kml/KmlIconStyleTagHandler.h:
    * src/lib/geodata/handlers/kml/KmlLineStringTagHandler.cpp:
    * src/lib/geodata/handlers/kml/KmlWidthTagHandler.cpp:
    * src/lib/geodata/handlers/kml/KmlCoordinatesTagHandler.h:
    * src/lib/geodata/handlers/kml/KmlExtrudeTagHandler.cpp:
    * src/lib/geodata/handlers/kml/KmlNameTagHandler.cpp:
    * src/lib/geodata/handlers/kml/KmlMarblePlacemarkTagHandler.cpp:
    * src/lib/geodata/handlers/kml/KmlColorTagHandler.h:
    * src/lib/geodata/handlers/kml/KmlStyleUrlTagHandler.cpp:
    * src/lib/geodata/handlers/kml/KmlHrefTagHandler.cpp:
    * src/lib/geodata/handlers/kml/KmlAltitudeModeTagHandler.h:
    * src/lib/geodata/handlers/kml/Kml_scaleTagHandler.cpp:
    * src/lib/geodata/handlers/kml/KmlDescriptionTagHandler.h:
    * src/lib/geodata/handlers/kml/KmlFillTagHandler.h:
    * src/lib/geodata/handlers/kml/KmlPairTagHandler.cpp:
    * src/lib/geodata/handlers/kml/KmlIconTagHandler.h:
    * src/lib/geodata/handlers/kml/KmlSimpleFieldTagHandler.cpp:
    * src/lib/geodata/handlers/kml/KmlKeyTagHandler.h:
    * src/lib/geodata/handlers/kml/KmlStyleMapTagHandler.cpp:
    * src/lib/geodata/handlers/kml/KmlLabelStyleTagHandler.cpp:
    * src/lib/geodata/handlers/kml/KmlHotSpotTagHandler.cpp:
    * src/lib/geodata/handlers/kml/KmlOuterBoundaryIsTagHandler.h:
    * src/lib/geodata/handlers/kml/KmlCountrycodeTagHandler.h:
    * src/lib/geodata/handlers/kml/KmlPopTagHandler.h:
    * src/lib/geodata/handlers/kml/KmlPolyStyleTagHandler.cpp:
    * src/lib/geodata/handlers/kml/KmlPlacemarkTagHandler.h: