@@ -1,0 +1,487 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<kml xmlns="http://earth.google.com/kml/2.2">
+<Document>
+  <name>Jakobsweg2</name>
+  <description><![CDATA[]]></description>
+  <Style id="style10">
+    <IconStyle>
+      <Icon>
+        <href>http://maps.google.com/mapfiles/ms/icons/blue-dot.png</href>
+      </Icon>
+    </IconStyle>
+  </Style>
+  <Style id="style12">
+    <IconStyle>
+      <Icon>
+        <href>http://maps.google.com/mapfiles/ms/icons/blue-dot.png</href>
+      </Icon>
+    </IconStyle>
+  </Style>
+  <Style id="style23">
+    <IconStyle>
+      <Icon>
+        <href>http://maps.google.com/mapfiles/ms/icons/blue-dot.png</href>
+      </Icon>
+    </IconStyle>
+  </Style>
+  <Style id="style28">
+    <IconStyle>
+      <Icon>
+        <href>http://maps.google.com/mapfiles/ms/icons/blue-dot.png</href>
+      </Icon>
+    </IconStyle>
+  </Style>
+  <Style id="style7">
+    <IconStyle>
+      <Icon>
+        <href>http://maps.google.com/mapfiles/ms/icons/blue-dot.png</href>
+      </Icon>
+    </IconStyle>
+  </Style>
+  <Style id="style25">
+    <IconStyle>
+      <Icon>
+        <href>http://maps.google.com/mapfiles/ms/icons/blue-dot.png</href>
+      </Icon>
+    </IconStyle>
+  </Style>
+  <Style id="style22">
+    <IconStyle>
+      <Icon>
+        <href>http://maps.google.com/mapfiles/ms/icons/blue-dot.png</href>
+      </Icon>
+    </IconStyle>
+  </Style>
+  <Style id="style2">
+    <IconStyle>
+      <Icon>
+        <href>http://maps.google.com/mapfiles/ms/icons/blue-dot.png</href>
+      </Icon>
+    </IconStyle>
+  </Style>
+  <Style id="style5">
+    <IconStyle>
+      <Icon>
+        <href>http://maps.google.com/mapfiles/ms/icons/blue-dot.png</href>
+      </Icon>
+    </IconStyle>
+  </Style>
+  <Style id="style19">
+    <IconStyle>
+      <Icon>
+        <href>http://maps.google.com/mapfiles/ms/icons/blue-dot.png</href>
+      </Icon>
+    </IconStyle>
+  </Style>
+  <Style id="style11">
+    <IconStyle>
+      <Icon>
+        <href>http://maps.google.com/mapfiles/ms/icons/blue-dot.png</href>
+      </Icon>
+    </IconStyle>
+  </Style>
+  <Style id="style21">
+    <IconStyle>
+      <Icon>
+        <href>http://maps.google.com/mapfiles/ms/icons/blue-dot.png</href>
+      </Icon>
+    </IconStyle>
+  </Style>
+  <Style id="style29">
+    <IconStyle>
+      <Icon>
+        <href>http://maps.google.com/mapfiles/ms/icons/blue-dot.png</href>
+      </Icon>
+    </IconStyle>
+  </Style>
+  <Style id="style8">
+    <IconStyle>
+      <Icon>
+        <href>http://maps.google.com/mapfiles/ms/icons/blue-dot.png</href>
+      </Icon>
+    </IconStyle>
+  </Style>
+  <Style id="style6">
+    <IconStyle>
+      <Icon>
+        <href>http://maps.google.com/mapfiles/ms/icons/blue-dot.png</href>
+      </Icon>
+    </IconStyle>
+  </Style>
+  <Style id="style32">
+    <IconStyle>
+      <Icon>
+        <href>http://maps.google.com/mapfiles/ms/icons/blue-dot.png</href>
+      </Icon>
+    </IconStyle>
+  </Style>
+  <Style id="style20">
+    <IconStyle>
+      <Icon>
+        <href>http://maps.google.com/mapfiles/ms/icons/blue-dot.png</href>
+      </Icon>
+    </IconStyle>
+  </Style>
+  <Style id="style27">
+    <IconStyle>
+      <Icon>
+        <href>http://maps.google.com/mapfiles/ms/icons/blue-dot.png</href>
+      </Icon>
+    </IconStyle>
+  </Style>
+  <Style id="style15">
+    <IconStyle>
+      <Icon>
+        <href>http://maps.google.com/mapfiles/ms/icons/blue-dot.png</href>
+      </Icon>
+    </IconStyle>
+  </Style>
+  <Style id="style13">
+    <IconStyle>
+      <Icon>
+        <href>http://maps.google.com/mapfiles/ms/icons/blue-dot.png</href>
+      </Icon>
+    </IconStyle>
+  </Style>
+  <Style id="style30">
+    <IconStyle>
+      <Icon>
+        <href>http://maps.google.com/mapfiles/ms/icons/blue-dot.png</href>
+      </Icon>
+    </IconStyle>
+  </Style>
+  <Style id="style16">
+    <IconStyle>
+      <Icon>
+        <href>http://maps.google.com/mapfiles/ms/icons/blue-dot.png</href>
+      </Icon>
+    </IconStyle>
+  </Style>
+  <Style id="style31">
+    <IconStyle>
+      <Icon>
+        <href>http://maps.google.com/mapfiles/ms/icons/blue-dot.png</href>
+      </Icon>
+    </IconStyle>
+  </Style>
+  <Style id="style18">
+    <IconStyle>
+      <Icon>
+        <href>http://maps.google.com/mapfiles/ms/icons/blue-dot.png</href>
+      </Icon>
+    </IconStyle>
+  </Style>
+  <Style id="style17">
+    <IconStyle>
+      <Icon>
+        <href>http://maps.google.com/mapfiles/ms/icons/blue-dot.png</href>
+      </Icon>
+    </IconStyle>
+  </Style>
+  <Style id="style1">
+    <IconStyle>
+      <Icon>
+        <href>http://maps.google.com/mapfiles/ms/icons/blue-dot.png</href>
+      </Icon>
+    </IconStyle>
+  </Style>
+  <Style id="style4">
+    <IconStyle>
+      <Icon>
+        <href>http://maps.google.com/mapfiles/ms/icons/blue-dot.png</href>
+      </Icon>
+    </IconStyle>
+  </Style>
+  <Style id="style26">
+    <IconStyle>
+      <Icon>
+        <href>http://maps.google.com/mapfiles/ms/icons/blue-dot.png</href>
+      </Icon>
+    </IconStyle>
+  </Style>
+  <Style id="style24">
+    <IconStyle>
+      <Icon>
+        <href>http://maps.google.com/mapfiles/ms/icons/blue-dot.png</href>
+      </Icon>
+    </IconStyle>
+  </Style>
+  <Style id="style3">
+    <IconStyle>
+      <Icon>
+        <href>http://maps.google.com/mapfiles/ms/icons/blue-dot.png</href>
+      </Icon>
+    </IconStyle>
+  </Style>
+  <Style id="style14">
+    <IconStyle>
+      <Icon>
+        <href>http://maps.google.com/mapfiles/ms/icons/blue-dot.png</href>
+      </Icon>
+    </IconStyle>
+  </Style>
+  <Style id="style9">
+    <IconStyle>
+      <Icon>
+        <href>http://maps.google.com/mapfiles/ms/icons/blue-dot.png</href>
+      </Icon>
+    </IconStyle>
+  </Style>
+  <Placemark>
+    <name>2.Juli - Freiburg</name>
+    <description><![CDATA[100 km]]></description>
+    <styleUrl>#style10</styleUrl>
+    <Point>
+      <coordinates>7.800293,48.000950,0.000000</coordinates>
+    </Point>
+  </Placemark>
+  <Placemark>
+    <name>3. Juli - Belfort</name>
+    <description><![CDATA[95 km]]></description>
+    <styleUrl>#style12</styleUrl>
+    <Point>
+      <coordinates>6.830750,47.652439,0.000000</coordinates>
+    </Point>
+  </Placemark>
+  <Placemark>
+    <name>4. Juli - Besancon</name>
+    <description><![CDATA[115 km]]></description>
+    <styleUrl>#style23</styleUrl>
+    <Point>
+      <coordinates>5.999908,47.246609,0.000000</coordinates>
+    </Point>
+  </Placemark>
+  <Placemark>
+    <name>5. Juli - Beaune</name>
+    <description><![CDATA[105 km]]></description>
+    <styleUrl>#style28</styleUrl>
+    <Point>
+      <coordinates>4.817505,47.017715,0.000000</coordinates>
+    </Point>
+  </Placemark>
+  <Placemark>
+    <name>6. Juli - Paray le Monial</name>
+    <description><![CDATA[85 km]]></description>
+    <styleUrl>#style7</styleUrl>
+    <Point>
+      <coordinates>4.121246,46.456779,0.000000</coordinates>
+    </Point>
+  </Placemark>
+  <Placemark>
+    <name>7. Juli - Vichy</name>
+    <description><![CDATA[55 km]]></description>
+    <styleUrl>#style25</styleUrl>
+    <Point>
+      <coordinates>3.424988,46.124653,0.000000</coordinates>
+    </Point>
+  </Placemark>
+  <Placemark>
+    <name>9. Juli - Clermont-Ferrand</name>
+    <description><![CDATA[80 km]]></description>
+    <styleUrl>#style22</styleUrl>
+    <Point>
+      <coordinates>3.103638,45.786678,0.000000</coordinates>
+    </Point>
+  </Placemark>
+  <Placemark>
+    <name>10. Juli - Bort-les-Orgues</name>
+    <description><![CDATA[80 km]]></description>
+    <styleUrl>#style2</styleUrl>
+    <Point>
+      <coordinates>2.499390,45.396523,0.000000</coordinates>
+    </Point>
+  </Placemark>
+  <Placemark>
+    <name>11. Juli - Argentat</name>
+    <description><![CDATA[90 km]]></description>
+    <styleUrl>#style5</styleUrl>
+    <Point>
+      <coordinates>1.937027,45.092430,0.000000</coordinates>
+    </Point>
+  </Placemark>
+  <Placemark>
+    <name>12. Juli - Sarlat la Canéda</name>
+    <description><![CDATA[100 km]]></description>
+    <styleUrl>#style19</styleUrl>
+    <Point>
+      <coordinates>1.208496,44.887012,0.000000</coordinates>
+    </Point>
+  </Placemark>
+  <Placemark>
+    <name>13. Juli - Port Sainte Foy et Ponchapt</name>
+    <description><![CDATA[70 km]]></description>
+    <styleUrl>#style11</styleUrl>
+    <Point>
+      <coordinates>0.208740,44.836395,0.000000</coordinates>
+    </Point>
+  </Placemark>
+  <Placemark>
+    <name>15. Juli - Bordeaux</name>
+    <description><![CDATA[100 km]]></description>
+    <styleUrl>#style21</styleUrl>
+    <Point>
+      <coordinates>-0.575409,44.833473,0.000000</coordinates>
+    </Point>
+  </Placemark>
+  <Placemark>
+    <name>16. Juli - Mimizan</name>
+    <description><![CDATA[110 km]]></description>
+    <styleUrl>#style29</styleUrl>
+    <Point>
+      <coordinates>-1.230469,44.199928,0.000000</coordinates>
+    </Point>
+  </Placemark>
+  <Placemark>
+    <name>17. Juli - Anglet</name>
+    <description><![CDATA[55 km]]></description>
+    <styleUrl>#style8</styleUrl>
+    <Point>
+      <coordinates>-1.518860,43.474846,0.000000</coordinates>
+    </Point>
+  </Placemark>
+  <Placemark>
+    <name>18. Juli - Saint Jean Pied de Port</name>
+    <description><![CDATA[80 km]]></description>
+    <styleUrl>#style6</styleUrl>
+    <Point>
+      <coordinates>-1.237164,43.163620,0.000000</coordinates>
+    </Point>
+  </Placemark>
+  <Placemark>
+    <name>19. Juli - Pamplona</name>
+    <description><![CDATA[65]]></description>
+    <styleUrl>#style32</styleUrl>
+    <Point>
+      <coordinates>-1.643829,42.807491,0.000000</coordinates>
+    </Point>
+  </Placemark>
+  <Placemark>
+    <name>20. Juli - Estella</name>
+    <description><![CDATA[65 km]]></description>
+    <styleUrl>#style20</styleUrl>
+    <Point>
+      <coordinates>-2.029724,42.664261,0.000000</coordinates>
+    </Point>
+  </Placemark>
+  <Placemark>
+    <name>22. Juli - Logroño</name>
+    <description><![CDATA[65 km]]></description>
+    <styleUrl>#style27</styleUrl>
+    <Point>
+      <coordinates>-2.449951,42.454872,0.000000</coordinates>
+    </Point>
+  </Placemark>
+  <Placemark>
+    <name>23. Juli - Santo Domingo de la Calzada</name>
+    <description><![CDATA[85 km]]></description>
+    <styleUrl>#style15</styleUrl>
+    <Point>
+      <coordinates>-2.952576,42.429539,0.000000</coordinates>
+    </Point>
+  </Placemark>
+  <Placemark>
+    <name>24. Juli - Burgos</name>
+    <description><![CDATA[75 km]]></description>
+    <styleUrl>#style13</styleUrl>
+    <Point>
+      <coordinates>-3.702393,42.334183,0.000000</coordinates>
+    </Point>
+  </Placemark>
+  <Placemark>
+    <name>25. Juli - Frómista</name>
+    <description><![CDATA[60 km]]></description>
+    <styleUrl>#style30</styleUrl>
+    <Point>
+      <coordinates>-4.406891,42.263081,0.000000</coordinates>
+    </Point>
+  </Placemark>
+  <Placemark>
+    <name>26. Juli - Sahagún</name>
+    <description><![CDATA[75 km]]></description>
+    <styleUrl>#style16</styleUrl>
+    <Point>
+      <coordinates>-5.028992,42.368690,0.000000</coordinates>
+    </Point>
+  </Placemark>
+  <Placemark>
+    <name>27. Juli - Léon</name>
+    <description><![CDATA[55 km]]></description>
+    <styleUrl>#style31</styleUrl>
+    <Point>
+      <coordinates>-5.570068,42.597576,0.000000</coordinates>
+    </Point>
+  </Placemark>
+  <Placemark>
+    <name>28. Juli - Astorga</name>
+    <description><![CDATA[60 km]]></description>
+    <styleUrl>#style18</styleUrl>
+    <Point>
+      <coordinates>-6.063080,42.455887,0.000000</coordinates>
+    </Point>
+  </Placemark>
+  <Placemark>
+    <name>30. Juli - Ponferrada</name>
+    <description><![CDATA[90 km]]></description>
+    <styleUrl>#style17</styleUrl>
+    <Point>
+      <coordinates>-6.590424,42.538918,0.000000</coordinates>
+    </Point>
+  </Placemark>
+  <Placemark>
+    <name>31. Juli - Triacastela</name>
+    <description><![CDATA[55 km]]></description>
+    <styleUrl>#style1</styleUrl>
+    <Point>
+      <coordinates>-7.242737,42.758106,0.000000</coordinates>
+    </Point>
+  </Placemark>
+  <Placemark>
+    <name>1. August - Portomarín</name>
+    <description><![CDATA[60 km]]></description>
+    <styleUrl>#style4</styleUrl>
+    <Point>
+      <coordinates>-7.615585,42.801949,0.000000</coordinates>
+    </Point>
+  </Placemark>
+  <Placemark>
+    <name>2. August - Arzúa</name>
+    <description><![CDATA[50 km]]></description>
+    <styleUrl>#style26</styleUrl>
+    <Point>
+      <coordinates>-8.162842,42.927269,0.000000</coordinates>
+    </Point>
+  </Placemark>
+  <Placemark>
+    <name>4. August - Santiago de Compostella</name>
+    <description><![CDATA[( 60 km )]]></description>
+    <styleUrl>#style24</styleUrl>
+    <Point>
+      <coordinates>-8.546677,42.882004,0.000000</coordinates>
+    </Point>
+  </Placemark>
+  <Placemark>
+    <name>( 5. August - Brandomil )</name>
+    <description><![CDATA[( 50 km )]]></description>
+    <styleUrl>#style3</styleUrl>
+    <Point>
+      <coordinates>-8.925018,43.004646,0.000000</coordinates>
+    </Point>
+  </Placemark>
+  <Placemark>
+    <name>( 6. August - Finisterre )</name>
+    <description><![CDATA[( 110 km )]]></description>
+    <styleUrl>#style14</styleUrl>
+    <Point>
+      <coordinates>-9.264221,42.906147,0.000000</coordinates>
+    </Point>
+  </Placemark>
+  <Placemark>
+    <name>( 7. August - Santiago de Compostella )</name>
+    <description><![CDATA[THE END]]></description>
+    <styleUrl>#style9</styleUrl>
+    <Point>
+      <coordinates>-8.545990,42.878983,0.000000</coordinates>
+    </Point>
+  </Placemark>
+</Document>
+</kml>
